# devkit

./: .gitignore  HELP.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: DESIGN.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: deps.rs  lib.rs  models.rs  probe.rs  runtime.rs  tray.rs  workspace_config.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: caps.rs  errors.rs  kinds.rs  mod.rs  project.rs  project_ref.rs  registry.rs  scan_engine.rs
src-tauri/src/deploy/: engine.rs  mod.rs  model.rs  secrets.rs
src-tauri/src/deploy/targets/: mod.rs
src-tauri/src/deploy/targets/jenkins/: mod.rs
src-tauri/src/health/: mod.rs
src-tauri/src/platform/: editor.rs  external_tools.rs  git.rs  macos_titlebar.rs  metrics.rs  mod.rs  net.rs  paths.rs  process_kill.rs  terminal.rs  which.rs
src-tauri/src/process/: mod.rs  summary.rs
src-tauri/src/providers/: mod.rs  traits.rs
src-tauri/src/providers/cargo/: actions.rs  detect.rs  mod.rs
src-tauri/src/providers/gradle/: actions.rs  detect.rs  mod.rs
src-tauri/src/providers/maven/: actions.rs  deps.rs  detect.rs  mod.rs  toolchain.rs
src-tauri/src/providers/node/: actions.rs  deps.rs  detect.rs  mod.rs  toolchain.rs
src-tauri/src/settings/: action_prefs.rs  init.rs  load_save.rs  migrate.rs  mod.rs  schema.rs
src-tauri/src/toolchains/: jdk.rs  maven_home.rs  mod.rs  node.rs  traits.rs
src-tauri/src/tools/: mod.rs  registry.rs
src-tauri/src/tools/ports/: mod.rs  service.rs
(+86 files in other folders)
